# Neuralink-Compression-Challenge

./: .gitignore  LICENSE  README.md  cProfile_encode.sh  compression_steps.md  coverage_report.sh  coverage_report.txt  cprofile.txt  decode  encode  encode.prof  encode.sh  encode.txt  encode_cProfile.txt  encode_updated.txt  eval.sh.test  exploratory_analysis.ipynb  linear-prediction-estimation.ipynb  profile_results.prof  pyproject.toml  requirements.txt  test.eval.sh  test_encode.py  test_file.wav.brainwire
.github/workflows/: python-app.yml
Hoffman_encoding/: decode  encode  eval.sh
Huffman_encoding/: decode  encode  scratch.py
analysis/: exploratory_analysis.ipynb  fourier_analysis_raw_neural_data.ipynb  neuralink_spike_detection_analysis.ipynb  noice_cancellation_with_python_and_fourier_transform.ipynb  noise_cancellation_with_python_and_fourier_transform.ipynb  pytorch_forecasting_tutorial.ipynb  signal_denoise.ipynb  signal_processing_tutorial.ipynb
analysis/tutorials/: cProfile.ipynb  comparing_amplitudes.ipynb  comparing_compression_methods.ipynb  comparing_file_writing_methods.ipynb  comparing_test_file_unique_amplitude_lengths.ipynb  comparing_unique_amplitude_lengths.ipynb  (+26 more)
data/: 0ab237b7-fb12-4687-afed-8d1e2070d621.wav.brainwire
py_encoding_env/: pyvenv.cfg
tests/: test_decode.py  test_encode.py
utility/: build_and_update.sh  git_add_A.sh  git_add_all.sh  git_update.sh  modify_filters.py  signal_process.py  trigger_dev_build_test_branch.sh  trigger_test_build_main_branch.sh  trigger_test_build_test_branch.sh  update_encode_decode.sh
(+2 files in other folders)
