[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainwire"
version = "0.1.2"
description = """
Tools to losslessly compress and decompress raw neural data.
"""
authors = [
  { name = "Evan Woods"},
]
maintainers = [
  { name = "Evan Woods"},
]
readme = "README.md"
license = {file = 'LICENSE'}
requires-python = ">=3.10"

dependencies = ["numpy>=1.0", "scipy", "numpy", "signal_processing_utilities>=0.1.8"]

[project.urls]
Homepage = "https://github.com/efwoods/Neuralink-Compression-Challenge"
Issues = "https://github.com/efwoods/Neuralink-Compression-Challenge/issues"